Small styling improvements.
- Added Raleway font as the default
- Changed everything to be em based instead of px

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <header>
         <h1>SpotCMS</h1>
     </header>
-    <md-list>
+    <md-list flex>
         <md-list-item>
             <md-button>
                 <span class="menu-item material-icons">dashboard</span>
@@ -47,6 +47,9 @@
             </md-button>
         </md-list-item>
     </md-list>
+    <footer>
+        SpotCMS 0.1-alpha, 2016.
+    </footer>
 </md-sidenav>
 
 <div class="container" layout="column" flex>
