More layout changes.
- Better icon alignment
- Switched icon colors around
- Enlarged base font size

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
 <body ng-app="SpotCms" layout="row">
 
-<md-sidenav md-component-id="main-menu" md-is-locked-open="$mdMedia('gt-sm')" layout="column" class="md-whiteframe-2dp" role="navigation" hide-print>
+<md-sidenav md-component-id="main-menu" md-is-locked-open="$mdMedia('gt-sm')" layout="column" class="md-whiteframe-8dp" role="navigation" hide-print>
     <header>
         <h1>SpotCMS</h1>
     </header>
@@ -44,6 +44,12 @@
             <md-button>
                 <span class="menu-item material-icons">settings</span>
                 Configuration
+            </md-button>
+        </md-list-item>
+        <md-list-item>
+            <md-button>
+                <span class="menu-item material-icons">help</span>
+                Helpdesk
             </md-button>
         </md-list-item>
     </md-list>
